# personal-academic-radar

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  SKILL.md  pyproject.toml  setup.py
.github/workflows/: test.yml
agents/: openai.yaml
assets/: com.personal-academic-radar.web.plist  config.example.toml  github-actions-daily.yml
docs/: ai-assisted-install.md  architecture.md  cloud-and-sync-roadmap.md  completion-audit.md
references/: deployment.md  profile-guidance.md
scripts/: macos_runner.sh  paper_monitor.py
src/academic_radar/: __init__.py  cli.py  engagement.py  enrichment.py  governance.py  official.py  operations.py  product.py  storage.py  web.py
src/academic_radar/assets/: config.example.toml  research-profile.example.md
src/academic_radar/migrations/: 001_initial.sql  002_feedback_and_operations.sql  003_feedback_audit.sql  004_product_readiness.sql  005_fulltext_reuse.sql  006_governance_and_tasks.sql  007_official_issue_checks.sql  008_profile_review_runs.sql  009_remove_dismissed_profile_suggestions.sql  010_fulltext_annotations.sql  011_remove_fulltext_annotations.sql  012_manual_papers.sql
src/academic_radar/static/: app.css  app.js
src/academic_radar/templates/: _paper_card.html  base.html  error.html  feedback.html  library.html  profile.html  sources.html  status.html  today.html
tests/: test_engagement.py  test_governance_enrichment.py  test_official.py  test_operations.py  test_paper_monitor.py  test_product.py  test_storage.py  test_web.py
tests/fixtures/: crossref.json
